fix: several themes have poor contrast for "blue" colors
Mirage, Onyx, Tutatara

--- a/plugins/plugin-codeflare/web/scss/themes/Mirage.scss
+++ b/plugins/plugin-codeflare/web/scss/themes/Mirage.scss
@@ -36,5 +36,6 @@ $color-red: #eb5b8e;
 $color-cyan: $latency-1;
 $color-yellow: #e7c484;
 $color-purple: #a38aa7;
+$color-blue: $latency-0;
 
 @include Theme($Theme);
