--- a/plugins/plugin-codeflare/web/scss/themes/Onyx.scss
+++ b/plugins/plugin-codeflare/web/scss/themes/Onyx.scss
@@ -34,5 +34,6 @@ $latency-5: #929292;
 
 $color-red: #c83b22;
 $color-cyan: $latency-0;
+$color-blue: $latency-1;
 
 @include Theme($Theme);
